--- a/stand/index.html
+++ b/stand/index.html
@@ -62,6 +62,22 @@
     </head>
 
     <body>
+
+        <div style="margin-top: 200px;">
+            <h2>
+                Sign Issue
+            </h2>
+            <button onclick="waves.issue({
+                name: 'Name of Token',
+                decimals: 2,
+                quantity: 1000,
+                reissuable: false,
+                description: 'Description of token',
+                script: undefined
+            }).broadcast()">
+                Sign Issue
+            </button>
+        </div  >
         <div>
             <h1>Clear</h1>
             <button onclick="localStorage.clear()">Clear storage</button>
@@ -176,22 +192,6 @@
             </h2>
             <button onclick="waves.logout();">
                 Logout
-            </button>
-        </div>
-
-        <div>
-            <h2>
-                Sign Issue
-            </h2>
-            <button onclick="waves.issue({
-                name: 'Name of Token',
-                decimals: 2,
-                quantity: 1000,
-                reissuable: false,
-                description: 'Description of token',
-                script: undefined
-            }).broadcast()">
-                Sign Issue
             </button>
         </div>
     </body>
