DEXW-2720: Add cancel lease confirmation

--- a/stand/index.html
+++ b/stand/index.html
@@ -172,6 +172,18 @@
         </div>
         <div>
             <h2>
+                Cancel Lease
+            </h2>
+            <button
+                onclick="waves.cancelLease({
+                    leaseId: 'FUQasynBUELMXc9T1hrphfFwJvU2ENBiUfnJPci7jq4w',
+                }).broadcast()"
+            >Cancel Lease
+            </button>
+        </div>
+
+        <div>
+            <h2>
                 Logout
             </h2>
             <button onclick="waves.logout();">
